--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ axerrno = "0.1.0"
 memory_addr = "0.2.0"
 percpu = "0.1.4"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+# axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axaddrspace = { path = "../axaddrspace" }
