feat(vcpu): implement VCpuIf trait for AxVCpu
- Add implementation of VCpuIf trait for AxVCpu<A> type
- Include axdevice_base crate for VCpuIf trait definition
- Implement vcpu_id and set_gpr methods for AxVCpu<A>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ memory_addr = "0.3.1"
 percpu = "0.1.4"
 
 axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates.git"}
